# C-Cpp-Projects

./: LICENSE  README.md
CppConversation/: CMakeLists.txt  README.md
CppConversation/include/: public.h
CppConversation/include/server/: chatserver.h  chatservice.h
CppConversation/include/server/db/: db.hpp
CppConversation/include/server/model/: friendmodel.h  group.h  groupmodel.h  groupuser.h  offlinemessagemodel.h  user.h  usermodel.h
CppConversation/include/server/redis/: redis.hpp
CppConversation/src/client/: main.cpp
CppConversation/src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
CppConversation/src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
CppConversation/test/: text.txt
CppConversation/test/testjson/: test.cpp
CppConversation/test/testmuduo/: CMakeLists.txt  muduo_server.cpp
